--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: rgb(69, 68, 70);
+    background:#31293A;
 }
 
 #btn{
@@ -7,7 +7,6 @@ body{
     color: white;
     background:  #4169e1;
     border: 0px; 
-    border-radius: 10px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     
 }
@@ -21,7 +20,6 @@ body{
     color:white;
     background: #4169e1;
     border: 0px;
-    border-radius: 10px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     
 }
@@ -48,7 +46,6 @@ body{
     color: white;
     background:#4169e1;
     border: 0px;
-    border-radius: 10px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
@@ -65,7 +62,6 @@ body{
     color: white;
     background: red;
     border: 0px;
-    border-radius: 10px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
